--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dynameh",
-  "version": "2.10.0",
+  "version": "2.10.1",
   "description": "DynamoDB on Node more easier",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -36,17 +36,18 @@
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.42",
     "@types/node": "^8.0.27",
+    "aws-sdk": "^2.176.0",
     "chai": "^4.1.2",
-    "gh-pages": "^1.0.0",
-    "mocha": "^3.4.2",
-    "rimraf": "^2.6.1",
+    "gh-pages": "^1.1.0",
+    "mocha": "^4.1.0",
+    "rimraf": "^2.6.2",
     "touch": "^3.1.0",
-    "ts-node": "^3.2.0",
+    "ts-node": "^4.1.0",
     "tslint": "^5.7.0",
-    "typedoc": "^0.8.0",
+    "typedoc": "^0.9.0",
     "typescript": "^2.5.2"
   },
   "peerDependencies": {
-    "aws-sdk": "^2.49.0"
+    "aws-sdk": "^2.176.0"
   }
 }
